# TuanTran-OMNI-ERP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps_script/: Code.gs
config/: settings.example.json
docs/: google-sheet-template.md  operations.md  quality.md  roadmap.md  usage.md
scripts/: check.ps1  package.ps1  start-web.ps1
src/omni_erp/: __init__.py  __main__.py  cli.py  web_import.py  web_server.py  web_state.py
src/omni_erp/dashboard/: __init__.py  models.py  service.py
src/omni_erp/fifo/: __init__.py  engine.py  models.py
src/omni_erp/foundation/: __init__.py  templates.py
src/omni_erp/importers/: __init__.py  marketplaces.py  models.py  sku_mapper.py
src/omni_erp/operations/: __init__.py  automation.py  backup.py  packaging.py
src/omni_erp/reconciliation/: __init__.py  models.py  service.py
src/omni_erp/reports/: __init__.py  exporters.py  models.py  service.py
src/omni_erp/warehouse/: __init__.py  models.py  service.py
templates/google_sheets/: inventory_lots.csv  products.csv  settings.csv  sku_mapping.csv  suppliers.csv  warehouses.csv
templates/marketplace_imports/: lazada_orders.csv  shopee_orders.csv  tiktok_shop_orders.csv
tests/: test_cli.py  test_dashboard.py  test_fifo_engine.py  test_foundation_templates.py  test_marketplace_importers.py  test_operations.py  test_reconciliation.py  test_reports.py  test_warehouse_service.py  test_web_app.py  test_web_import.py  test_web_state.py
web/: app.js  index.html  styles.css
