[project]
name = "tuantran-omni-erp"
version = "0.1.0"
description = "Foundation for OMNI ERP workflows: SKU, inventory, FIFO, reconciliation, and reporting."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
omni-erp = "omni_erp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
